k8s-3tiers/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: productapp
  labels:
    name: productapp
    environment: production
