k8s-3tiers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productapp-ingress
  namespace: productapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: productapp.local
    http:
      paths:
      # Route pour l'API Backend
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      # Route pour le Frontend (doit être après /api)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
